objects/TenantUsageAttrDetail__dll.object
<CustomObject>
    <fields>
        <fullName>DataSourceObject__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataSource__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalOrganization__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KQ_tenantbillingusageeventid__c</fullName>
        <label>KQ_tenantbillingusageeventid</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>creationtime__c</fullName>
        <label>Creation Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>customerspanid__c</fullName>
        <label>Customer Span Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dataspaceapiname__c</fullName>
        <label>Data Space API Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eventtime__c</fullName>
        <label>Event Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>referenceid__c</fullName>
        <label>Reference Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>Status</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tenantbillingusageeventid__c</fullName>
        <label>Tenant Billing Usage Event ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>usagereportingorgid__c</fullName>
        <label>Usage Reporting Org ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
</CustomObject>